@@ -122,8 +122,10 @@ class TodoyuLabelManager {
 		$labelKey	= $keyParts[2];
 
 		if( empty($extKey) || empty($fileKey) || empty($labelKey) ) {
-			Todoyu::log('Invalid label key: <' . $fullKey . '>', TodoyuLogger::LEVEL_ERROR);
-			return Todoyu::$CONFIG['DEBUG'] ? $fullKey : '';
+			if( strpos($fullKey, '.') ) {
+				Todoyu::log('Invalid label key: <' . $fullKey . '>', TodoyuLogger::LEVEL_ERROR);
+				return Todoyu::$CONFIG['DEBUG'] ? $fullKey : '';
+			}
 		}
 
 		$label	= self::getCachedLabel($extKey, $fileKey, $labelKey, $locale);
