@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <labels>
+	<label index="files">Files</label>
 	<label index="download">Download</label>
 	<label index="upload">Upload</label>
 	<label index="size.gb">GB</label>
@@ -8,6 +9,7 @@
 	<label index="size.b">B</label>
 	<label index="filename">File Name</label>
 	<label index="filesize">File Size</label>
+	<label index="upload.progressmessage">Uploading File</label>
 	<label index="upload.succeeded">Uploading of file succeeded</label>
 	<label index="upload.selectfile">Select file to upload:</label>
 	<label index="upload.error.uploadfailed">Upload failed.</label>
